# axe-python-sample

./: .gitignore  README.md  celery_sample.py  celery_task.py  conftest.py  funboost_task_sample.py  main.py  pyproject.toml
celery_sample/: celery_task.py
dash-sample/: dash-express.py  dash-markdown.py  dash-sample.py  dash-table.py  dash_express.py  dash_few_components.py  dash_hello.py
funboost_sample/: funboost_task_sample.py
gradio-sample/: gradio-transformers-sample.py
gradio_sample/: gradio_sample.py  gradio_transformers_sample.py
loc-time-convert-svc/: Dockerfile  README.md  pyproject.toml  run_app.py
loc-time-convert-svc/app/: config.py  constant.py
loc-time-convert-svc/app/search_data/: search_api.py
loc-time-convert-svc/app/server/: http_server.py
loc-time-convert-svc/datasets/: creat_index_bulk_data.py
loc-time-convert-svc/docker-compose/: docker-compose-local.yml
loc-time-convert-svc/docs/: 城市时区查询服务接口文档.adoc
loc-time-convert-svc/tests/: test_loc_time_server.py
nlp-lexical-analysis/: Dockerfile  README.md  pyproject.toml  run_app.py
nlp-lexical-analysis/app/: config.py
nlp-lexical-analysis/app/common/: err_msg.py
nlp-lexical-analysis/app/core/: spacy_service.py
nlp-lexical-analysis/app/server/: http_server.py
nlp-lexical-analysis/docs/: nlp-lexical-analysis接口文档.adoc
nlp-lexical-analysis/tests/: test_http_api.py  test_http_server.py
python-logging-sample/: README.md  pyproject.toml
sqlite3/: sqlite3.py
sqlite3_sample/: sqlite3_sample.py
streamlit-sample/: streamlit_plato_mini_sample.py  streamlit_sample.py
textblob_sample/: README.md  textblob_sample.py
